todoyu search changelog

search 1.1.1 - 2011-09-15
	* Added: Hooks: filterset.add, filterset.update, filterset.delete

search 1.1.0 - 2011-06-17
	* Changed: Requires core 2.1
	* Changed: Structure for 2.1
	* Changed: All classes are prefixed with extension name
	* Feature: Added display of result items amount to search results in search area
	* Bugfix: Dynamic foreign filtersets are not found anymore after big class rename session
	* Bugfix: Fixed date-time negation labels (renamed From/To => Before/After)
	* Bugfix: Fixed missing rights init/check methods in controllers