@@ -1,0 +1,6 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
+<labels>
+	<label index="general">Ustawienia ogólne</label>
+	<label index="general.use">Użyj/pokarz funkcje wyszukiwania</label>
+	<label index="general.area">Użyj obszaru wyszukiwania</label>
+</labels>
